   longer occur.

12 December 2017
 - Implemented basic calibrant determination to peakDetection function.
 - Sigma returned by curve_fit & gaussFunction could be negative, leading to some peaks
   not showing up in peakDetection. This was fixed by always taking the absolute value   
   of the sigma.

15 December 2017
 - Adjusted the Gaussian fitting code to determine an initial sigma instead of hard coding
   it to 0.1 as per a suggestion made by `Crazy Ivan` on SO. The change is based on the
   following assumption: The idea is that within one standard deviation of the mean, the 
   values of the Gaussian are greater than np.exp(-0.5) times the maximum value. So the 
   first line locates this "peak" and the second takes half of its width as the guess for 
   sigma.

31 January 2018
 - Fixed a bug that could occur during automatic peak detection when the peak value does
   not match the actual data.

27 March 2018
 - Added Peak Retention Time to the outputs, if Peak Quality Criteria is selected. This
   parameter is useful in determining the retention time (GU) CV post-calibration.

26 April 2018
 - Fixed a typo in the summary file (regarding peak retention time and peak residual retention
   time).
 - Updated the peak detection loop (determine new local maxima and minima in each cycle of
   the loop), which improved the peak-detection behaviour around co-eluting peaks.

16 May 2018
 - Fixed a bug that could cause HappyTools to crash when it decided to try and save/read a
   number that was stored in scientific notation.

21 May 2018
 - Fixed a bug in the PlotOverview that would fill the wrong area (above curve instead of
   below curve) when processing low intensity data.
 - Implemented a button in the batchProcess that allows the user to select where the data is
   that will be processed by HappyTools.
 - Implemented a function that checks if HappyTools has the required disk access rights.